sitehis/src/styles/cards.css
.cards {
    display: flex;
    flex-wrap: wrap;
    gap: 1rem;
    justify-content: center;
    align-items: center;
    flex-direction: row;
}

.card {
    box-sizing: border-box;
    padding: 1rem;
    background-color: #FAF0E6;
    border-radius: 8px;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
    width: 20vw;
    height: 60vh;
    transition: 1s ease-in-out;

    p{
        font-size: medium;
    }
}

.card img {
    width: 100%;
    height: 50%;
    object-fit: cover;
    object-position: center;
    border-radius: 8px;
}

.card:hover {
    filter: blur(1px) brightness(0.9);
}

body.dark-mode .card {
    background-color: #5a3a22;
    color: #fff;
}

body.dark-mode .card:hover {
    filter: brightness(1);
}

@media screen and (max-width: 480px) {
    .card {
        width: 80vw;
        height: 70vh;
    }
}

